# ogr

./: .env.template  .gitattributes  .gitchangelog.rc  .gitignore  .packit.yaml  .pre-commit-config.yaml  .prettierignore  .thoth.yaml  .zuul.yaml  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Containerfile.tests  Jenkinsfile  Makefile  README.md  ci.fmf  markdown.tpl  pre-commit-pb.yaml  pyproject.toml  python-ogr.spec  recipe.yaml  release-conf.yaml  setup.cfg  setup.py  tox.ini
.fullsend/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: do-release.yml  docs.yml  fullsend.yaml  prepare-release.yml  pypi-publish.yml
docs/: abstract.html  constant.html  deprecation.html  exceptions.html  factory.html  index.html  parsing.html  read_only.html  utils.html
docs/abstract/: abstract_class.html  access_level.html  auth_method.html  comment.html  commit_flag.html  exception.html  git_project.html  git_service.html  git_tag.html  git_user.html  index.html  issue.html  label.html  pull_request.html  release.html  status.html
docs/services/: base.html  index.html
docs/services/forgejo/: comments.html  flag.html  index.html  issue.html  label.html  project.html  pull_request.html  release.html  service.html  user.html  utils.html
docs/services/github/: check_run.html  comments.html  flag.html  index.html  issue.html  label.html  project.html  pull_request.html  release.html  service.html  user.html
examples/: README.md  list_pr_patches.ipynb  list_prs_since_release.ipynb  releases.ipynb  set_commit_status.ipynb  syncing_labels.ipynb  user_owned_repositories.ipynb  working_with_issues.ipynb
fedora/: python-ogr.spec
files/: local-tests-requirements.yaml  zuul-install-requirements-pip.yaml  zuul-install-requirements-rpms.yaml  zuul-pre-commit.yaml  zuul-reverse-dep-packit.yaml  zuul-tests.yaml
files/tasks/: build-rpm-deps.yaml  checkout_packit.yaml  configure-git.yaml  generic-dnf-requirements.yaml  install-ogr.yaml  install-requre.yaml  packit-requirements.yaml  packit-tests.yaml  packit_reverse_dep_test.yaml  project-dir.yaml  rpm-test-deps.yaml
files/test-tasks/: git-apis-deps.yaml  install-ogr.yaml  install-twine.yaml  ogr-deps.yaml  project-dir.yaml  run-tests.yaml  src-path.yaml
ogr/: __init__.py  abstract.py  constant.py  deprecation.py  exceptions.py  factory.py  metrics.py  mock_core.py  parsing.py  persistent_storage.py  read_only.py  utils.py
ogr/abstract/: __init__.py  abstract_class.py  access_level.py  auth_method.py  comment.py  commit.py  commit_flag.py  exception.py  git_project.py  git_service.py  git_tag.py  git_user.py  issue.py  label.py  pull_request.py  release.py  status.py
ogr/services/: abstract.py  base.py  github.py  github_tweak.py  gitlab.py  our_pagure.py  pagure.py
plans/: README.md  full.fmf  linters.fmf  main.fmf  packit-integration.fmf  pre-commit.fmf  rpminspect-centos.fmf  rpminspect-fedora.fmf  rpminspect.centos.fmf  rpminspect.fedora.fmf  rpmlint.fmf  smoke.fmf
tests/: full.fmf  replacements.py  smoke.fmf  smoke.sh
tests/integration/: __init__.py  conftest.py  our_pagure.py  pagure.py  test_factory.py  test_github.py  test_github_app.py  test_github_readonly.py  test_gitlab.py  test_our_pagure.py  test_pagure.py  test_token_is_none_then_set
tests/mocking/: test_github_mock.py
tests/unit/: conftest.py  our_pagure.py  test_factory.py  test_forgejo.py  test_github.py  test_gitlab.py  test_metrics.py  test_our_pagure.py  test_pagure.py  test_parsing.py  test_utils.py  utils.py
(+1148 files in other folders)
