[bdist_wheel]
universal = 1

[metadata]
name = ogr
description = One API for multiple git forges.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/packit-service/ogr
author = Red Hat
author_email = user-cont-team@redhat.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Utilities
keywords =
    git
    api
    github
    gitlab
    pagure

[options]
packages = find:
install_requires =
    Deprecated
    GitPython
    PyGithub
    PyYAML
    cryptography
    python-gitlab
python_requires = >=3.7
include_package_data = True
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

[options.extras_require]
testing =
    pytest

[options.packages.find]
exclude =
    tests*
